# rocket-include-handlebars

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: hello_world_pages.rs
examples/views/: index2.hbs
included-handlebars/: index.hbs  index2.hbs
src/: fairing.rs  functions.rs  handlebars_response.rs  helpers.rs  lib.rs  macros.rs  manager.rs  reloadable.rs
src/debug/: fairing.rs  handlebars_response.rs  macros.rs  manager.rs  mod.rs  reloadable.rs
src/release/: fairing.rs  handlebars_response.rs  macros.rs  manager.rs  mod.rs
tests/: index.rs  init.rs
