[package]
name = "rocket-include-handlebars"
version = "0.12.20"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-include-handlebars"
homepage = "https://magiclen.org/rocket-include-handlebars"
keywords = ["rocket", "server", "web", "static", "handlebars"]
categories = ["web-programming"]
description = "This is a crate which provides macros `handlebars_resources_initialize!` and `handlebars_response!` to statically include HBS (Handlebars) files from your Rust project and make them be the HTTP response sources quickly."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/rocket-include-handlebars"
branch = "master"

[dependencies]
rocket = "0.4.2"
crc-any = "2"
html-minifier = "3"
rc-u8-reader = "2.0.1"
lru_time_cache = "0.10"
handlebars = "3"
serde = "1"
serde_json = "1"

rocket-etag-if-none-match = "0.3"

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false

[dev-dependencies.json-gettext]
version = "3"
features = ["rocketly"]

[features]
helper = []
helper_inc = ["helper"]
helper_dec = ["helper"]
helper_eq_str = ["helper"]
helper_ne_str = ["helper"]