[package]
name = "rocket-include-handlebars"
version = "0.13.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-include-handlebars"
homepage = "https://magiclen.org/rocket-include-handlebars"
keywords = ["rocket", "server", "web", "static", "handlebars"]
categories = ["web-programming"]
description = "This is a crate which provides macros `handlebars_resources_initialize!` and `handlebars_response!` to statically include HBS (Handlebars) files from your Rust project and make them be the HTTP response sources quickly."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
wyhash = "0.5.0"
html-minifier = "3"
rc-u8-reader = { version = "2.0.14", features = ["tokio"] }
lru_time_cache = "0.11"
handlebars = "3.5"
serde = "1"
serde_json = "1"

rocket-etag-if-none-match = { git = "https://github.com/magiclen/rocket-etag-if-none-match", version = "0.4.0" }

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false

[features]
helper_inc = []
helper_dec = []
helper_eq_str = []
helper_ne_str = []
helpers = ["helper_inc", "helper_dec", "helper_eq_str", "helper_ne_str"]