[package]
name = "rocket-include-handlebars"
version = "0.13.4"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/magiclen/rocket-include-handlebars"
homepage = "https://magiclen.org/rocket-include-handlebars"
keywords = ["rocket", "server", "web", "static", "handlebars"]
categories = ["web-programming"]
description = "This is a crate which provides macros `handlebars_resources_initialize!` and `handlebars_response!` to statically include HBS (Handlebars) files from your Rust project and make them be the HTTP response sources quickly."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.3"
html-minifier = "4"
rc-u8-reader = { version = "2.0.14", features = ["tokio"] }
lru_time_cache = "0.11"
handlebars = "4.1.2"
serde = "1"
manifest-dir-macros = { version = "0.1.6", features = ["tuple"] }

rocket-etag-if-none-match = "0.4.0"

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false

[dev-dependencies]
serde_json = "1"

[features]
helper_inc = []
helper_dec = []
helper_eq_str = []
helper_ne_str = []
helpers = ["helper_inc", "helper_dec", "helper_eq_str", "helper_ne_str"]
